add post gress page

--- a/templates/mainpage/main.html
+++ b/templates/mainpage/main.html
@@ -272,7 +272,7 @@
 						<li><a href="https://www.linkedin.com/in/diptokundu/" class="wow fadeInUp" data-wow-delay=".1s" target="_blank"><i class="fa fa-linkedin"></i></a></li>
 						<li><a href="https://github.com/dkkundu/" class="wow fadeInUp" data-wow-delay=".2s" target="_blank"><i class="fa fa-github"></i></a></li>
 						<li><a href="mailto:dkkundu00@gmail.com" class="wow fadeInUp" data-wow-delay=".4s"><i class="fa fa-envelope"></i></a></li>
-						<li><a href="mailto:info@dkkundu.tech" class="wow fadeInUp" data-wow-delay=".4s"><i class="fa fa-envelope"></i></a></li>
+						<li><a href="mailto:info@dkkundu.com" class="wow fadeInUp" data-wow-delay=".4s"><i class="fa fa-envelope"></i></a></li>
 						<li><a href="skype:dipto.kundu?chat" class="wow fadeInUp" data-wow-delay=".5s" target="_blank"><i class="fa fa fa-skype"></i></a></li>
 					</ul>
 
